--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -41,7 +41,7 @@
                     android:drawablePadding="12dp"
                     android:text="请先点击此处，去激活无障碍权限"
                     android:textColor="#000000"
-                    android:textSize="14sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -246,7 +246,7 @@
             android:background="#fff"
             android:visibility="visible"
             app:cardCornerRadius="4dp"
-            app:cardElevation="0dp"
+            app:cardElevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newTaskCardView">
@@ -255,65 +255,80 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/tv_tasks"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:text="自动刷金币任务"
-                    android:textColor="#000000"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_add_task"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint_title"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:background="#60d4af"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_add_task" />
-
-
-                <TextView
-                    android:id="@+id/tv_add_task"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="12dp"
-                    android:background="@drawable/shape_round_corner"
-                    android:drawableLeft="@drawable/add"
-                    android:drawablePadding="2dp"
-                    android:gravity="center"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:text="添加任务"
-                    android:textColor="@color/color_white"
-                    android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    >
 
-                <TextView
-                    android:id="@+id/tv_clear_task"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="12dp"
-                    android:background="@drawable/shape_round_corner"
-                    android:drawableLeft="@drawable/un_add"
-                    android:drawablePadding="2dp"
-                    android:gravity="center"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:text="清空任务"
-                    android:textColor="@color/color_white"
-                    android:textSize="12sp"
-                    app:layout_constraintEnd_toStartOf="@+id/tv_add_task"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/tv_tasks"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        android:text="刷金币任务"
+                        android:textColor="#ffffff"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/tv_add_task"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/tv_add_task" />
 
-                <View
-                    android:id="@+id/view_div"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="8dp"
-                    android:background="#0A000000"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_add_task" />
+
+                    <TextView
+                        android:id="@+id/tv_add_task"
+                        android:layout_width="wrap_content"
+                        android:layout_height="28dp"
+                        android:layout_marginRight="12dp"
+                        android:background="@drawable/shape_round_corner"
+                        android:drawableLeft="@drawable/add"
+                        android:drawablePadding="2dp"
+                        android:gravity="center"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:text="添加任务"
+                        android:textColor="@color/color_white"
+                        android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_clear_task"
+                        android:layout_width="wrap_content"
+                        android:layout_height="28dp"
+                        android:layout_marginRight="4dp"
+                        android:background="@drawable/shape_round_corner"
+                        android:drawableLeft="@drawable/un_add"
+                        android:drawablePadding="2dp"
+                        android:gravity="center"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:text="清空任务"
+                        android:textColor="@color/color_white"
+                        android:textSize="13sp"
+                        app:layout_constraintEnd_toStartOf="@+id/tv_add_task"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        />
+
+                    <View
+                        android:id="@+id/view_div"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="8dp"
+                        android:background="#0A000000"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_add_task" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/taskListView"
@@ -321,12 +336,12 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view_div" />
+                    app:layout_constraintTop_toBottomOf="@+id/constraint_title" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/startBtn"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="55dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
